# portal.aarothbd.com-be

./: .dockerignore  .env.example  .gitignore  .lftp_ignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  aarothbd.api.service  backend.aarothbd.com.service  celery.aarothbd.com.service  celerybeat.aarothbd.com.service  celeryflower.aarothbd.com.service  dump.rdb  gunicorn.py  manage.py  pyproject.toml  requirements.txt
.github/workflow/: deploy.yaml
.github/workflows/: deploy.yaml
apps/about_us/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/accounts/: admin.py  apps.py  manager.py  models.py  signals.py
apps/action/: admin.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/address/: admin.py  models.py  serializers.py  services.py  tests.py  types.py  urls.py  views.py
apps/authentication/: apps.py  exceptions.py  types.py
apps/authorization/: constants.py  urls.py
apps/blog/: admin.py  constants.py  urls.py
apps/business_partner/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/company/: admin.py  filters.py  types.py
apps/contact_us/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/country/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/customer_order/: admin.py  apps.py  constants.py  urls.py
apps/data_migration/: apps.py
apps/district/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/division/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/home/: admin.py  models.py  serializers.py  urls.py  views.py
apps/menu/: admin.py  models.py  serializers.py  urls.py  (+2 more)
core/: asgi.py  authentication.py  celery.py  drf_schema.py  env.py  filter.py  middlewares.py  mixins.py  pagination.py  urls.py  utils.py  wsgi.py
scripts/: deploy.sh  entrypoint.sh
templates/: change-password-email.html  reset-password-email.html
(+372 files in other folders)
